*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -114,10 +114,10 @@ submodules do not overlap.
 \tbf{p=}\textit{xpos},\textit{ypos},\tbf{ring},\textit{width,height}
 &
 {\raggedright Used for module vectors. Arranges submodules in an ellipse,
-with the top-left corner of its bounding boxes at (\textit{xpos},\textit{ypos}),
+with the top-left corner of its bounding box at (\textit{xpos},\textit{ypos}),
 with the \textit{width} and \textit{height}.
 
-Defaults: \textit{width}=40, \textit{height}=24
+Defaults: \textit{width,height} are chosen so that submodules do not overlap.
 
 \tbf{ring} may be abbreviated as \tbf{ri}.}\\\hline
 % ROW 7
