--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -112,7 +112,7 @@ travel through a series of connections, to start and arrive in simple
 modules. Such series of connections that go from simple module to
 simple module are called \textit{routes}.  Compound modules act as
 `cardboard boxes' in the model, transparently relaying messages
-between their inside and their outside world.
+between their inside and the outside world.
 
 
 \subsection{Modeling of packet transmissions}
