--- a/doc/src/manual/ch-overview.tex
+++ b/doc/src/manual/ch-overview.tex
@@ -26,6 +26,8 @@ themselves (Fig. \ref{fig:ch-overview:modules}). The depth of module
 nesting is not limited; this allows the user to reflect the logical
 structure of the actual system in the model structure.
 
+Model structure is described in {\opp}'s NED language.
+
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=3.772in, height=1.292in]{figures/usmanFig2}
@@ -54,7 +56,6 @@ instance of a previously defined module type; all modules of the
 network are instantiated as submodules and sub-submodules of the
 system module.
 
-
 When a module type is used as a building block, there is no
 distinction whether it is a simple or a compound module. This allows
 the user to split a simple module into several
@@ -62,7 +63,6 @@ simple modules embedded into a compound\index{module!compound} module,
 or vica versa, aggregate the functionality of a compound module into a
 single simple module, without affecting existing users of the module
 type.
-
 
 Module types can be stored in files separately from the place
 of their actual usage. This means that the user can group existing
@@ -150,32 +150,21 @@ of {\opp} cannot be used.
 \index{module!parameters}
 \index{parameters|see{module parameters}}
 
-Modules can have parameters. Parameters can be used:
-\begin{enumerate}
-  \item{for parameterizing module topology}
-  \item{to customize simple module behaviour}
-\end{enumerate}
+Modules can have parameters. Parameters can be assigned either
+in the NED files or the configuration file omnetpp.ini.
+
+Parameters may be used to customize simple module behaviour,
+and for parameterizing the model topology.
 
 Parameters can take string, numeric or boolean values, or can
 contain XML data trees. Numeric values include expressions using
 other parameters and calling C functions, random variables from
 different distributions, and values input interactively by the user.
 
-
 Numeric-valued parameters can be used to construct topologies in a
 flexible way. Within a compound module, parameters can define the
 number of submodules, number of gates, and the way the internal
 connections are made.
-
-
-Compound modules can pass parameters or expressions of parameters
-to their submodules. Parameter passing can be done by value or
-by reference.
-
-During simulation execution, if a module changes the value of
-a parameter taken by reference, the changed value propagates
-to other modules. This effect may sometimes be used for
-tuning model parameters during execution.
 
 
 \subsection{Topology description method}
@@ -187,114 +176,103 @@ in Chapter \ref{cha:the-ned-language}.
 
 \section{Programming the algorithms}
 
-The simple\index{module!simple} modules of a model contain the algorithms as C++ functions.
+The simple\index{module!simple} modules of a model contain the algorithms
+as C++ functions.
 The full flexibility and power of the programming language can
 be used, supported by the {\opp} simulation class library.
-
-
-{\opp} supports a process-style\index{module!process-style} description
-method for describing activities. During simulation execution,
-simple\index{module!simple} module functions appear to run in parallel,
-because they are implemented as coroutines\index{module!coroutine} (also
-termed lightweight processes). Coroutines were chosen because they allow an
-intuitive description of the algorithm and they can also serve as a good
-basis for implementing other description methods like state-transition
-diagrams\index{state-transition diagram|see{finite state machine}} or Petri
-nets\index{petri nets}.
-
-{\opp} has a consistent object-oriented design. One can freely
-use OOP concepts (inheritance, polymorphism etc) to extend the
+Simulation programmer can choose between event-driven and process-style
+description, and one can freely use object-oriented concepts
+(inheritance, polymorphism etc) and design patterns to extend the
 functionality of the simulator.
 
-Elements of the simulation (messages, modules, queues etc.) are
-represented as objects. These classes are part of the simulation
-class library:
+Simulation objects (messages, modules, queues etc.) are represented
+with C++ classes. They have been designed to work together efficiently,
+creating a powerful simulation programming framework.
+The following classes are part of the simulation class library:
+
 \begin{itemize}
-\item{modules, gates, connections etc.}
-\item{parameters}
-\item{messages}
-\item{container classes (e.g. queue, array)}
-\item{data collection classes}
-\item{statistic and distribution estimation classes (histograms, $P^{2}$
-algorithm for calculating quantiles etc.)}
-\item{transient detection and result accuracy detection classes}
+  \item{modules, gates, connections etc.}
+  \item{parameters}
+  \item{messages}
+  \item{container classes (e.g. queue, array)}
+  \item{data collection classes}
+  \item{statistic and distribution estimation classes (histograms, $P^{2}$
+  algorithm for calculating quantiles etc.)}
+  \item{transient detection and result accuracy detection classes}
 \end{itemize}
 
-The objects are designed so that they can efficiently work together,
-creating a powerful framework for simulation programming.
+The classes are also specially instrumented, allowing one
+to traverse objects of a running simulation and display information
+about them such as name, class name, state variables or contents.
+This feature has made it possible to create a simulation GUI where
+all internals of the simulation are visible.
 
 
-\subsection{Creating simple modules}
-\index{module!simple!creation}
-
-Each simple\index{module!simple} module type is implemented with a C++ class. Simple
-module classes are derived from a simple module base class, by
-redefining the virtual function that contains the algorithm.
-The user can add other member functions to the class to split
-up a complex algorithm; he can also add data members to the class.
-
-It is also possible to derive new simple\index{module!simple} module classes from
-existing ones. For example, if one wants to experiment with retransmission
-timeout schemes in a transport protocol, he can implement the
-protocol in one class, create a virtual function for the retransmission
-algorithm and then derive a family of classes that implement
-concrete schemes. This concept is further supported by the fact
-that in the network description, actual module types can be parameters.
-
-
-\subsection{Object mechanisms}
-
-The use of smart container classes allows the user to build
-\textit{aggregate data structures}\index{aggregate data structures}.
-For example, one can add any number of objects to a message object as
-parameters. Since the added objects can contain further objects,
-complex data structures can be built.
-
-There is an efficient \textit{ownership}\index{ownership} mechanism
-built in. The user can specify an owner for each object; then, the
-owner object will have the responsibility of destroying that object.
-Most of the time, the ownership mechanism works transparently;
-ownership only needs to be explicitly managed when the user wants to
-do something non-typical.
-
-
-The \textit{foreach}\index{forEach mechanism} mechanism allows one to
-enumerate the objects inside a container object in a uniform way and
-do some operation on them. This feature which makes it possible to
-handle many objects together. (The \textit{foreach} feature is extensively used
-by the user interfaces with debugging capability and the snapshot
-mechanism; see later.)
-
-
-\subsection{Derive new classes}
-
-It most cases, the functionality offered by the {\opp} classes
-is enough for the user. But if it is needed, one can derive new
-classes from the existing ones or create entirely new classes.
-For flexibility, several member functions are declared virtual.
-When the user creates new classes, certain rules need to be kept
-so that the object can fully work together with other objects.
-
-
-\subsection{Self-describing objects to ease debugging}
-\index{debugging}
-
-The class library is designed so that objects can give textual
-information about themselves. This makes it possible to peek
-into a running simulation program: through an appropriate user
-interface, one can examine (and modify) the internal data structures
-of a running simulation. This feature helps the user to get some
-insight what is happening inside the model and get hands-on experience.
-
-
-A unique feature called \textit{snapshot}\index{snapshot} allows the
-user to dump the contents of the simulation model or a part of it into
-a text file. The file will contain textual reports about every object;
-this can be of invaluable help at times of debugging. Ordinary
-variables can also be made to appear in the snapshot file. Snapshot
-creations can be scheduled from within the simulation program or done
-from the user interface.
-
+% \subsection{Creating simple modules}
+% \index{module!simple!creation}
+%
+% Each simple\index{module!simple} module type is implemented with a C++ class. Simple
+% module classes are derived from a simple module base class, by
+% redefining the virtual function that contains the algorithm.
+% The user can add other member functions to the class to split
+% up a complex algorithm; he can also add data members to the class.
+%
+% It is also possible to derive new simple\index{module!simple} module classes from
+% existing ones. For example, if one wants to experiment with retransmission
+% timeout schemes in a transport protocol, he can implement the
+% protocol in one class, create a virtual function for the retransmission
+% algorithm and then derive a family of classes that implement
+% concrete schemes. This concept is further supported by the fact
+% that in the network description, actual module types can be parameters.
+%
+%
+% \subsection{Object mechanisms}
+%
+% The use of smart container classes allows the user to build
+% \textit{aggregate data structures}\index{aggregate data structures}.
+% For example, one can add any number of objects to a message object as
+% parameters. Since the added objects can contain further objects,
+% complex data structures can be built.
+%
+% There is an efficient \textit{ownership}\index{ownership} mechanism
+% built in. The user can specify an owner for each object; then, the
+% owner object will have the responsibility of destroying that object.
+% Most of the time, the ownership mechanism works transparently;
+% ownership only needs to be explicitly managed when the user wants to
+% do something non-typical.
+%
+%
+% The \textit{foreach}\index{forEach mechanism} mechanism allows one to
+% enumerate the objects inside a container object in a uniform way and
+% do some operation on them. This feature which makes it possible to
+% handle many objects together. (The \textit{foreach} feature is extensively used
+% by the user interfaces with debugging capability and the snapshot
+% mechanism; see later.)
+%
+%
+% \subsection{Derive new classes}
+%
+% It most cases, the functionality offered by the {\opp} classes
+% is enough for the user. But if it is needed, one can derive new
+% classes from the existing ones or create entirely new classes.
+% For flexibility, several member functions are declared virtual.
+% When the user creates new classes, certain rules need to be kept
+% so that the object can fully work together with other objects.
+%
+%
+% \subsection{Self-describing objects to ease debugging}
+% \index{debugging}
+%
+%
+%
+% A unique feature called \textit{snapshot}\index{snapshot} allows the
+% user to dump the contents of the simulation model or a part of it into
+% a text file. The file will contain textual reports about every object;
+% this can be of invaluable help at times of debugging. Ordinary
+% variables can also be made to appear in the snapshot file. Snapshot
+% creations can be scheduled from within the simulation program or done
+% from the user interface.
+%
 
 
 \section{Using {\opp}}
@@ -310,11 +288,14 @@ discussed.
 
 An {\opp} model consists of the following parts:
 \begin{itemize}
-  \item{NED language topology description(s)\index{ned!files} which
-    describe the module structure with parameters, gates etc. They are
-    files with .ned suffix. NED files can be written with any text
-    editor or using the GNED graphical editor\index{ned!graphical interface}.}
-  \item{ Simple modules sources. They are C++ files, with \texttt{.h}/\texttt{.cc} suffix.}
+  \item{NED language topology description(s)\index{ned!files} (\texttt{.ned} files)
+    which describe the module structure with parameters, gates etc.
+    NED files can be written with any text editor or using the
+    GNED graphical editor\index{ned!graphical editor}.}
+  \item{Message definitions (\texttt{.msg} files). You can define various message
+    types and add data fields to them. {\opp} will translate message definitions
+    into full-fledged C++ classes.}
+  \item{Simple modules sources. They are C++ files, with \texttt{.h}/\texttt{.cc} suffix.}
 \end{itemize}
 
 The simulation system provides the following components:
@@ -343,9 +324,9 @@ a user interface to form a simulation executable.
 
 The simulation executable is a standalone program,
 thus it can be run on other machines without {\opp} or the model files
-being present. When the program is started, it reads in a configuration
+being present. When the program is started, it reads a configuration
 file\index{simulation!configuration file} (usually called
-\texttt{omnetpp.ini}\index{omnetpp.ini}); it contains settings that
+\texttt{omnetpp.ini}\index{omnetpp.ini}). This file contains settings that
 control how the simulation is run, values for model parameters, etc.
 The configuration file can also prescribe several simulation runs; in
 the simplest case, they will be executed by the simulation program one
@@ -359,11 +340,17 @@ of output vector files. But it is not expected that someone will
 process the result files using {\opp} alone: output files are text
 files in a format which (maybe after some preprocessing using
 \fprog{sed}, \fprog{awk} or \fprog{perl}) can be read into math
-packages like Matlab or its free equivalent Octave, or imported into
-spreadsheets like Excel. All these external programs have rich
+packages like Matlab or Octave, or imported into
+spreadsheets like OpenOffice Calc, Gnumeric or MS Excel.
+All these external programs have rich
 functionality for statistical analysis and visualization, and {\opp}
 does not try to duplicate their efforts. This manual briefly describes
 some data plotting programs and how to use them with {\opp}.
+
+Output scalar files can be visualized with the Scalars tool.
+It can draw bar charts, x-y plots (e.g. throughput vs offered load),
+or export data via the clipboard for more detailed analysis into
+spreadsheets or other programs.
 
 
 \subsubsection{User interfaces}
@@ -422,24 +409,27 @@ The simulation system itself:
     \tbf{lib/}           library files
     \tbf{bitmaps/}       icons that can be used in network graphics
     \tbf{doc/}           manual (PDF), readme, license, etc.
-      \tbf{html/}        manual in HTML
-       \tbf{api/}        API reference in HTML
-       \tbf{nedxml-api/} API reference for the NEDXML library
+      \tbf{manual/}      manual in HTML
+      \tbf{tictoc-tutorial/}  introduction into using {\opp}
+      \tbf{api/}         API reference in HTML
+      \tbf{nedxml-api/}  API reference for the NEDXML library
     \tbf{src/}           {\opp} sources
       \tbf{nedc/}        NED compiler\index{ned!compiler}
       \tbf{sim/}         simulation kernel
-        \tbf{std/}       files for non-distributed execution
-        \tbf{pvm/}       files for distributed execution over PVM
-        \tbf{mpi/}       files for distributed execution using MPI
+        \tbf{parsim/}    files for distributed execution
+        \tbf{netbuilder/}files for dynamically reading NED files
       \tbf{envir/}       common code for user interfaces
       \tbf{cmdenv/}      command-line user interface
       \tbf{tkenv/}       Tcl/Tk-based user interface
       \tbf{gned/}        graphical NED editor\index{ned!graphical interface}
       \tbf{plove/}       output vector analyzer and plotting tool
-      \tbf{nedxml/}      NEDXML library (experimental)
+      \tbf{scalars}      output scalar analyzer and plotting tool
+      \tbf{nedxml/}      NEDXML library
       \tbf{utils/}       makefile-autocreator etc
     \tbf{test/}          regression test suite
+      \tbf{core/}        regression test suite for the simulation library
       \tbf{distrib/}     regression test suite for built-in distributions
+      ...
 \end{Verbatim}
 
 Sample simulations are within the \texttt{samples} directory. Each of the
