--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -13,13 +13,12 @@ component descriptions (channels\index{channel},
 simple\index{module!simple}/compound\index{module!compound} module
 types). The channels, simple modules and compound
 modules of one network description can be reused in another network
-description. As a consequence, the NED language makes it possible for
-users to build their own module libraries.
+description.
 
 Files containing network descriptions generally have a \texttt{.ned}
-suffix.  NED files are not used directly: they are
-translated into C++ code by the NEDC compiler, then compiled by the
-C++ compiler and linked into the simulation executable.
+suffix. NED files can be loaded dynamically into simulation programs,
+or translated into C++ by the NED compiler and linked into
+the simulation executable.
 
 The EBNF description of the language can be found in Appendix
 \ref{cha:ned-language-grammar}.
