--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -1045,8 +1045,8 @@ expr.setDoubleValue(expression,3);
 \end{verbatim}
 
 
-For more information, see the reference and the code NEDC generates
-for parameter expressions\index{parameter!expressions}.
+For more information, see the reference and the code the NED compiler
+generates for parameter expressions\index{parameter!expressions}.
 
 
 
